--- a/host_vars/ap.yml
+++ b/host_vars/ap.yml
@@ -1,3 +1,3 @@
 ansible_network_os: routeros
 ansible_connection: network_cli
-ansible_ssh_private_key_file: temp/developer.key
+ansible_ssh_private_key_file: test/temp/developer.key
