--- a/.travis.yml
+++ b/.travis.yml
@@ -1,1 +1,36 @@
 # write me
+language: python
+
+python:
+  - 2.7
+  - 3.3
+
+env:
+  global:
+    - ROUTEROS_VERSION=6.43.4
+  # matrix:
+  #   - USE_NETWORK=true
+  #   - USE_NETWORK=false
+
+matrix:
+  allow_failures:
+    - os: osx
+  include:
+    - os: linux
+      python: 2.7
+    - os: linux
+      python: 3.3
+    - os: osx
+      python: 2.7
+
+before_install:
+  - test/travis.install.sh
+
+install: 
+  - pip install requirements.txt
+
+script:
+  - test/run_server.sh
+
+after_script:
+  - killall qemu-system-x86_64
