--- a/roles/routeros-ansible-role/defaults/main.yml
+++ b/roles/routeros-ansible-role/defaults/main.yml
@@ -1,3 +1,8 @@
 date: "{{ lookup('pipe', 'date +%Y%m%d-%H%M') }}"
 shortdate: "{{ lookup('pipe', 'date +%Y%m%d') }}"
 
+# specific 
+routeros_ssh_port: 3322
+routeros_disable_password_login: True
+routeros_disable_old_cryptographic_login: True
+routeros_timezone: Europe/Rome
