--- a/.travis.yml
+++ b/.travis.yml
@@ -4,10 +4,6 @@ language: python
 dist: trusty
 sudo: required
 
-python:
-  - 2.7
-  - 3.3
-
 env:
   global:
     - ROUTEROS_VERSION=6.43.4
@@ -18,8 +14,14 @@ env:
 matrix:
   allow_failures:
     - os: osx
+      python: 2.7
+    - os: osx
+      python: 3.3
+    - os: linux
+      python: 3.3
   include:
     - os: linux
+      python: 2.7
 
 before_install:
   - test/travis.install.sh
