--- a/.travis.yml
+++ b/.travis.yml
@@ -39,8 +39,15 @@ before_script:
   - test/run_server.sh
 
 script:
-  - test/install.sh
-  - test/shutdown.sh
+  # Check the role/playbook's syntax.
+  # - ansible-playbook -i tests/inventory tests/test.yml --syntax-check
+  - ansible-playbook -i test/inventory test/routeros.yml --syntax-check
+  # install
+  - ANSIBLE_CONFIG=test/ansible.cfg ansible-playbook -i test/inventory test/routeros.yml --tags install -vvvv
+  # shutdown 
+  - ANSIBLE_CONFIG=test/ansible.cfg ansible-playbook -i test/inventory.secure test/routeros.yml --tags shutdown -vvvv
+  # lint
+  - ansible-lint test/routeros.yml || true
 
 after_script:
-  - killall qemu-system-x86_64
+  - killall qemu-system-x86_64 && false
