--- a/.travis.yml
+++ b/.travis.yml
@@ -30,10 +30,10 @@ matrix:
       python: 3.3
 
 before_install:
-  - test/travis.install.sh
+  - tests/travis.install.sh
 
 install: 
-  - pip install -r test/requirements.txt
+  - pip install -r tests/requirements.txt
 
 before_script:
   - test/run_server.sh
@@ -41,13 +41,13 @@ before_script:
 script:
   # Check the role/playbook's syntax.
   # - ansible-playbook -i tests/inventory tests/test.yml --syntax-check
-  - ansible-playbook -i test/inventory test/routeros.yml --syntax-check
+  - ansible-playbook -i tests/inventory tests/routeros.yml --syntax-check
   # install
-  - ANSIBLE_CONFIG=test/ansible.cfg ansible-playbook -i test/inventory test/routeros.yml --tags install -vvvv
+  - ANSIBLE_CONFIG=tests/ansible.cfg ansible-playbook -i tests/inventory tests/routeros.yml --tags install -vvvv
   # shutdown 
-  - ANSIBLE_CONFIG=test/ansible.cfg ansible-playbook -i test/inventory.secure test/routeros.yml --tags shutdown -vvvv
+  - ANSIBLE_CONFIG=tests/ansible.cfg ansible-playbook -i tests/inventory.secure tests/routeros.yml --tags shutdown -vvvv
   # lint
-  - ansible-lint test/routeros.yml || true
+  - ansible-lint tests/routeros.yml || true
 
 after_script:
   - killall qemu-system-x86_64 && false
