--- a/.travis.yml
+++ b/.travis.yml
@@ -36,7 +36,7 @@ install:
   - pip install -r tests/requirements.txt
 
 before_script:
-  - test/run_server.sh
+  - tests/run_server.sh
 
 script:
   # Check the role/playbook's syntax.
