--- a/tests/host_vars/apsec.yml
+++ b/tests/host_vars/apsec.yml
@@ -1,6 +1,6 @@
 ansible_network_os: routeros
 ansible_connection: network_cli
-ansible_ssh_private_key_file: test/temp/developer.key
+ansible_ssh_private_key_file: tests/temp/developer.key
 
 routeros_disable_password_login: False
 routeros_secure_address: 192.168.254.0/24
