--- a/tasks/reboot.yml
+++ b/tasks/reboot.yml
@@ -1,3 +1,3 @@
-- name: attiva scheduler
+- name: reboot device
   routeros_command:
-    commands: /system scheduler enable reboot-mt-on-demand
+    commands: ":execute {/system reboot};"
