--- a/tests/requirements.txt
+++ b/tests/requirements.txt
@@ -1,4 +1,5 @@
-setuptools == 40.5.0
-ansible >= 2.7.1
-librouteros == 2.1.1 
-ansible-lint >= 3.5.1
+setuptools == 45.1.0
+ansible == 2.9.4
+librouteros == 3.0.0 
+ansible-lint == 4.2.0
+paramiko == 2.7.1 
