--- a/.travis.yml
+++ b/.travis.yml
@@ -16,8 +16,8 @@ matrix:
   include:
     - os: linux
       python: 3.6
-    - os: osx
-      python: 3.6
+    # - os: osx
+    #   python: 3.6
 
 before_install:
   - tests/travis.install.sh
