avoid "did not meet _ requirements" warnings when using

--- a/tests/ansible.cfg
+++ b/tests/ansible.cfg
@@ -4,6 +4,9 @@ retry_files_enabled = False
 host_key_checking = False
 timeout = 30
 
+[inventory]
+enable_plugins = ini
+
 # https://raw.githubusercontent.com/ansible/ansible/devel/examples/ansible.cfg
 #terminal_plugins=./terminal_plugins
 
