revert generation private key

--- a/tests/requirements.txt
+++ b/tests/requirements.txt
@@ -1,10 +1,9 @@
 setuptools == 44.0.0
 ansible == 2.9.4
 ansible-lint == 4.2.0
+paramiko == 2.7.1
 
-paramiko == 2.7.1 ; python_version == '3.6'
 librouteros == 3.0.0 ; python_version == '3.6'
 
-paramiko == 2.6.0 ; python_version == '2.7'
 librouteros == 2.4.0 ; python_version == '2.7'
 chainmap == 1.0.3 ; python_version == '2.7'
