--- a/.travis.yml
+++ b/.travis.yml
@@ -35,9 +35,9 @@ script:
   # - ansible-playbook -i tests/inventory tests/test.yml --syntax-check
   - ansible-playbook -i tests/inventory tests/routeros.yml --syntax-check
   # install
-  - ANSIBLE_CONFIG=tests/ansible.cfg ansible-playbook -i tests/inventory tests/routeros.yml --key-file tests/temp/developer.key --tags install -vvvv
+  - ANSIBLE_CONFIG=tests/ansible.cfg ansible-playbook -i tests/inventory tests/routeros.yml --key-file tests/developer.key --tags install -vvvv
   # shutdown 
-  - ANSIBLE_CONFIG=tests/ansible.cfg ansible-playbook -i tests/inventory.secure tests/routeros.yml --key-file tests/temp/developer.key --tags shutdown -vvvv
+  - ANSIBLE_CONFIG=tests/ansible.cfg ansible-playbook -i tests/inventory.secure tests/routeros.yml --key-file tests/developer.key --tags shutdown -vvvv
   # lint
   - ansible-lint tests/routeros.yml || true
 
